--- a/themes/icarus/source/css/_partial/profile.styl
+++ b/themes/icarus/source/css/_partial/profile.styl
@@ -30,9 +30,9 @@
     .base-info
       #avatar
         display: block
-        margin: 10px auto 20px
-        width: profile-avatar-size
-        height: profile-avatar-size
+        margin: -10px auto -20px
+        width: profile-avatar-width
+        height: profile-avatar-height
       #name, #title, #location
         display: block
         text-align: center
