--- a/themes/icarus/source/css/_variables.styl
+++ b/themes/icarus/source/css/_variables.styl
@@ -38,6 +38,8 @@ thumbnail-default-small = 'images/thumb-default-small.png'
 // Profile bar
 profile = hexo-config("profile")
 profile-avatar-size = 128px
+profile-avatar-width = 128px
+profile-avatar-height = 180px
 
 // Layout
 block-margin = 40px
